Correctly disable buttons in case a remote control is not available. Make it more obvious when a remote is not available.

Fixes some crash reports when people tried to edit a non existent remote:

BUG: 287568
BUG: 284640
BUG: 287568
BUG: 301046